// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storybook Storyshots Pages/Commits/WaterfallIcon Failed Icon 1`] = `
<a
  aria-label="failed icon"
  className="leafygreen-ui-cssveg css-1emht1s-StyledRouterLink-linkStyles-IconWrapper enafhlo1"
  data-cy="waterfall-task-status-icon"
  href="/task/task-id"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-h1k2k-TaskStatusWrapper enafhlo0"
    data-task-icon="ubuntu1604"
  >
    <svg
      aria-label="Failure Icon"
      fill="currentColor"
      height={16}
      viewBox="0 0 21 21"
      width={16}
    >
      <path
        d="M17.7783.807588c-.7811-.7810482-2.0474-.7810486-2.8285 0L10.0001 5.75734 5.05035.807588c-.78105-.7810484-2.04738-.7810482-2.82843 0L.80771 2.2218c-.7810481.78105-.7810485 2.04738 0 2.82843l4.94975 4.94975L.80771 14.9497c-.7810474.7811-.7810481 2.0474 0 2.8285l1.41421 1.4142c.78105.781 2.04738.781 2.82843 0l4.94975-4.9498 4.9497 4.9498c.7811.781 2.0474.781 2.8285 0l1.4142-1.4142c.781-.7811.781-2.0474 0-2.8285l-4.9498-4.94972 4.9498-4.94975c.781-.78105.781-2.04738 0-2.82843L17.7783.807588Z"
        fill="#CF4A22"
      />
    </svg>
  </div>
</a>
`;

exports[`storybook Storyshots Pages/Commits/WaterfallIcon Success Icon 1`] = `
<a
  aria-label="success icon"
  className="leafygreen-ui-cssveg css-1emht1s-StyledRouterLink-linkStyles-IconWrapper enafhlo1"
  data-cy="waterfall-task-status-icon"
  href="/task/task-id"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="css-h1k2k-TaskStatusWrapper enafhlo0"
    data-task-icon="ubuntu1604"
  >
    <svg
      aria-label="Checkmark Icon"
      className="leafygreen-ui-ifwzrn"
      fill="none"
      height={16}
      role="img"
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6.306 9.05l5.455-5.455a1 1 0 011.414 0l.707.707a1 1 0 010 1.414l-7.067 7.068a1 1 0 01-1.5-.098l-3.049-3.97a1 1 0 01.184-1.402l.595-.457a1.25 1.25 0 011.753.23L6.306 9.05z"
        fill="currentColor"
        fillRule="evenodd"
      />
    </svg>
  </div>
</a>
`;
